b2b_k8s_demo.yaml
# Instructions for hands-on lab:
# 1) Right-click on file and open the command pallet
# 2) Choose 'Replace' tool
# 3) Find "/replace_me/"
# 4) Replace All with your student ID
# 5) Update line 34 to include a custom message. 
# 6) Right-click & save file. Or use ctrl-s
# 7) Go back to the shell prompt and apply the manifest using the command: kubectl apply -f your_file_name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld 
  namespace: /replace_me/  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld
      namespace: /replace_me/
  template:
    metadata:
      labels:
        app: aks-helloworld
        namespace: /replace_me/
    spec:
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld  
  namespace: /replace_me/
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  namespace: /replace_me/
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-helloworld-/replace_me/.fcfd977c4e724ffd9ab8.eastus2.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: aks-helloworld
            port: 
              number: 80
